# blowup

./: CMakeLists.txt  README.md  install.sh
examples/: .singularhistory  loghostfile  run_template.sh  run_template.sing  templategp.lib  templategspc.lib
examples/temp/: .singularhistory  12276058107495435135hamsini 4798  14858228861285380880hamsini 4663  input0
share/include/: template_interface.hpp
src/: installation.cpp
template/: .implementation.cpp.swp  .singularhistory  CMakeLists.txt  implementation.cpp
template/LIB/: templategspc.lib
workflow/: CMakeLists.txt  template.xpnet
